Fix login gate, add Kannada localization and backend diagnostics

--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
                 class="bg-white dark:bg-stone-900 p-8 md:p-12 rounded-[3rem] shadow-2xl border border-stone-100 dark:border-stone-800">
                 <div id="gate-login-view" class="space-y-6">
                     <div class="text-center md:text-left">
-                        <h2 class="text-3xl font-bold mb-2">Welcome Back</h2>
-                        <p class="text-stone-500">Please sign in to access your farm dashboard.</p>
+                        <h2 id="gate-login-title" class="text-3xl font-bold mb-2">Welcome Back</h2>
+                        <p id="gate-login-sub" class="text-stone-500">Please sign in to access your farm dashboard.</p>
                     </div>
                     <div class="space-y-4">
                         <input type="email" id="gate-login-email"
@@ -134,19 +134,20 @@
                         <input type="password" id="gate-login-password"
                             class="w-full px-5 py-4 rounded-2xl border border-stone-200 dark:border-stone-700 bg-stone-50 dark:bg-stone-800 outline-none focus:ring-2 focus:ring-agri-green"
                             placeholder="Password">
-                        <button onclick="handleGateLogin()"
+                        <button id="gate-login-btn" onclick="handleGateLogin()"
                             class="w-full bg-agri-green text-white font-bold py-5 rounded-2xl transition-all shadow-lg shadow-agri-green/20 hover:scale-[1.02]">Sign
                             In</button>
                     </div>
-                    <p class="text-center text-sm text-stone-500">ಹೊಸಬರೇ? <a href="javascript:void(0)"
-                            onclick="switchGateView('signup')"
-                            class="text-agri-green font-bold hover:underline">ಖಾತೆಯನ್ನು ರಚಿಸಿ</a></p>
+                    <p class="text-center text-sm text-stone-500"><span id="gate-login-footer">ಹೊಸಬರೇ?</span> <a
+                            href="javascript:void(0)" onclick="switchGateView('signup')"
+                            class="text-agri-green font-bold hover:underline" id="gate-to-signup-btn">ಖಾತೆಯನ್ನು
+                            ರಚಿಸಿ</a></p>
                 </div>
 
                 <div id="gate-signup-view" class="hidden space-y-6">
                     <div class="text-center md:text-left">
-                        <h2 class="text-3xl font-bold mb-2">Join AgriStore</h2>
-                        <p class="text-stone-500">Start your modern farming journey today.</p>
+                        <h2 id="gate-signup-title" class="text-3xl font-bold mb-2">Join AgriStore</h2>
+                        <p id="gate-signup-sub" class="text-stone-500">Start your modern farming journey today.</p>
                     </div>
                     <div class="space-y-4">
                         <input type="text" id="gate-signup-name"
@@ -158,12 +159,13 @@
                         <input type="password" id="gate-signup-password"
                             class="w-full px-5 py-4 rounded-2xl border border-stone-200 dark:border-stone-700 bg-stone-50 dark:bg-stone-800 outline-none focus:ring-2 focus:ring-agri-green"
                             placeholder="Password">
-                        <button onclick="handleGateSignup()"
+                        <button id="gate-signup-btn" onclick="handleGateSignup()"
                             class="w-full bg-agri-green text-white font-bold py-5 rounded-2xl transition-all shadow-lg shadow-agri-green/20 hover:scale-[1.02]">ಖಾತೆಯನ್ನು
                             ರಚಿಸಿ</button>
                     </div>
-                    <p class="text-center text-sm text-stone-500">ಈಗಾಗಲೇ ಖಾತೆ ಹೊಂದಿದ್ದೀರಾ? <a href="javascript:void(0)"
-                            onclick="switchGateView('login')" class="text-agri-green font-bold hover:underline">ಲಾಗ್
+                    <p class="text-center text-sm text-stone-500"><span id="gate-signup-footer">ಈಗಾಗಲೇ ಖಾತೆ
+                            ಹೊಂದಿದ್ದೀರಾ?</span> <a href="javascript:void(0)" onclick="switchGateView('login')"
+                            class="text-agri-green font-bold hover:underline" id="gate-to-login-btn">ಲಾಗ್
                             ಇನ್</a></p>
                 </div>
             </div>
@@ -274,7 +276,7 @@
                                 class="inline-flex items-center justify-center gap-2 bg-agri-green text-white px-8 py-3 rounded-xl font-semibold hover:bg-agri-dark transition-all shadow-lg shadow-agri-green/20">
                                 Shop Now <i data-lucide="arrow-right" class="w-5 h-5"></i>
                             </a>
-                            <button
+                            <button id="grow-btn"
                                 class="inline-flex items-center justify-center gap-2 bg-white dark:bg-stone-800 text-stone-900 dark:text-white border border-stone-200 dark:border-stone-700 px-8 py-3 rounded-xl font-semibold hover:bg-stone-50 dark:hover:bg-stone-700 transition-all">
                                 <i data-lucide="sprout" class="w-5 h-5"></i> Learn Growing
                             </button>
@@ -895,7 +897,21 @@
                     farmingTips: "Expert Tips",
                     farmingAction: "Essential Action",
                     monJan: "Jan", monFeb: "Feb", monMar: "Mar", monApr: "Apr", monMay: "May", monJun: "Jun",
-                    monJul: "Jul", monAug: "Aug", monSep: "Sep", monOct: "Oct", monNov: "Nov", monDec: "Dec"
+                    monJul: "Jul", monAug: "Aug", monSep: "Sep", monOct: "Oct", monNov: "Nov", monDec: "Dec",
+                    gateLoginTitle: "Welcome Back",
+                    gateLoginSub: "Please sign in to access your farm dashboard.",
+                    gateLoginBtn: "Sign In",
+                    gateSignupTitle: "Join AgriStore",
+                    gateSignupSub: "Start your modern farming journey today.",
+                    gateSignupBtn: "Create Account",
+                    newHere: "New here?",
+                    alreadyMember: "Already a member?",
+                    fillAll: "Please fill all fields",
+                    welcomeBack: "Welcome back!",
+                    accCreated: "Account created successfully!",
+                    loggedIn: "Logged in successfully!",
+                    loggedOut: "Logged out successfully",
+                    authError: "Auth service error. Check Firebase console."
                 },
                 KN: {
                     heroTitle: "<span class='text-agri-green'>ಪ್ರೀಮಿಯಂ ಉತ್ಪನ್ನಗಳೊಂದಿಗೆ</span> ಸಮೃದ್ಧಿಯನ್ನು ಬೆಳೆಸಿಕೊಳ್ಳಿ",
@@ -929,7 +945,21 @@
                     farmingTips: "ತಜ್ಞರ ಸಲಹೆಗಳು",
                     farmingAction: "ಅಗತ್ಯ ಕ್ರಮ",
                     monJan: "ಜನವರಿ", monFeb: "ಫೆಬ್ರವರಿ", monMar: "ಮಾರ್ಚ್", monApr: "ಏಪ್ರಿಲ್", monMay: "ಮೇ", monJun: "ಜೂನ್",
-                    monJul: "ಜುಲೈ", monAug: "ಆಗಸ್ಟ್", monSep: "ಸೆಪ್ಟೆಂಬರ್", monOct: "ಅಕ್ಟೋಬರ್", monNov: "ನವೆಂಬರ್", monDec: "ಡಿಸೆಂಬರ್"
+                    monJul: "ಜುಲೈ", monAug: "ಆಗಸ್ಟ್", monSep: "ಸೆಪ್ಟೆಂಬರ್", monOct: "ಅಕ್ಟೋಬರ್", monNov: "ನವೆಂಬರ್", monDec: "ಡಿಸೆಂಬರ್",
+                    gateLoginTitle: "ಸ್ವಾಗತ",
+                    gateLoginSub: "ನಿಮ್ಮ ಫಾರ್ಮ್ ಡ್ಯಾಶ್‌ಬೋರ್ಡ್ ಪ್ರವೇಶಿಸಲು ದಯವಿಟ್ಟು ಸೈನ್ ಇನ್ ಮಾಡಿ.",
+                    gateLoginBtn: "ಸೈನ್ ಇನ್",
+                    gateSignupTitle: "AgriStore ಗೆ ಸೇರಿ",
+                    gateSignupSub: "ಇಂದೇ ನಿಮ್ಮ ಆಧುನಿಕ ಕೃಷಿ ಪ್ರಯಾಣವನ್ನು ಪ್ರಾರಂಭಿಸಿ.",
+                    gateSignupBtn: "ಖಾತೆಯನ್ನು ರಚಿಸಿ",
+                    newHere: "ಹೊಸಬರೇ?",
+                    alreadyMember: "ಈಗಾಗಲೇ ಸದಸ್ಯರೇ?",
+                    fillAll: "ದಯವಿಟ್ಟು ಎಲ್ಲಾ ಕ್ಷೇತ್ರಗಳನ್ನು ಭರ್ತಿ ಮಾಡಿ",
+                    welcomeBack: "ಮತ್ತೆ ಸ್ವಾಗತ!",
+                    accCreated: "ಖಾತೆಯನ್ನು ಯಶಸ್ವಿಯಾಗಿ ರಚಿಸಲಾಗಿದೆ!",
+                    loggedIn: "ಯಶಸ್ವಿಯಾಗಿ ಲಾಗ್ ಇನ್ ಆಗಿದ್ದೀರಿ!",
+                    loggedOut: "ಯಶಸ್ವಿಯಾಗಿ ಲಾಗ್ ಔಟ್ ಆಗಿದ್ದೀರಿ",
+                    authError: "ದೃಢೀಕರಣ ಸೇವೆ ದೋಷ. ಫೈರ್ಬೇಸ್ ಕನ್ಸೋಲ್ ಪರಿಶೀಲಿಸಿ."
                 }
             };
 
@@ -948,7 +978,30 @@
                 renderProducts(products);
                 initFarmingGuide();
                 lucide.createIcons();
+                checkBackend();
             };
+
+            function checkBackend() {
+                // Diagnostic check for Firebase
+                try {
+                    if (!firebase.apps.length) {
+                        console.error("Firebase not initialized!");
+                        showToast("Backend configuration missing!", true);
+                        return;
+                    }
+                    db.collection('health-check').limit(1).get()
+                        .then(() => console.log("Backend connection healthy"))
+                        .catch(err => {
+                            if (err.code === 'permission-denied') {
+                                console.warn("Firestore permissions restricted (Normal for new projects)");
+                            } else {
+                                console.error("Database connection error:", err);
+                            }
+                        });
+                } catch (e) {
+                    console.error("Backend diagnostic failed:", e);
+                }
+            }
 
             // Farming Guide Logic
             function initFarmingGuide() {
@@ -1024,7 +1077,7 @@
                 if (shopBtn) {
                     shopBtn.innerHTML = `${t.shopNow} <i data-lucide="arrow-right" class="w-5 h-5"></i>`;
                 }
-                const growBtn = document.querySelector('button:has(i[data-lucide="sprout"])');
+                const growBtn = document.getElementById('grow-btn');
                 if (growBtn) {
                     growBtn.innerHTML = `<i data-lucide="sprout" class="w-5 h-5"></i> ${t.learnGrowing}`;
                 }
@@ -1033,6 +1086,32 @@
                 if (emptyCartP) emptyCartP.innerText = t.emptyCart;
                 const checkoutBtn = document.querySelector('button[onclick="checkout()"]');
                 if (checkoutBtn) checkoutBtn.innerText = t.checkout;
+
+                // Gate Translation
+                const glt = document.getElementById('gate-login-title');
+                if (glt) glt.innerText = t.gateLoginTitle;
+                const gls = document.getElementById('gate-login-sub');
+                if (gls) gls.innerText = t.gateLoginSub;
+                const glb = document.getElementById('gate-login-btn');
+                if (glb) glb.innerText = t.gateLoginBtn;
+                const glf = document.getElementById('gate-login-footer');
+                if (glf) glf.innerText = t.newHere;
+                const gts = document.getElementById('gate-to-signup-btn');
+                if (gts) gts.innerText = t.gateSignupBtn;
+
+                const gst = document.getElementById('gate-signup-title');
+                if (gst) gst.innerText = t.gateSignupTitle;
+                const gss = document.getElementById('gate-signup-sub');
+                if (gss) gss.innerText = t.gateSignupSub;
+                const gsb = document.getElementById('gate-signup-btn');
+                if (gsb) gsb.innerText = t.gateSignupBtn;
+                const gsf = document.getElementById('gate-signup-footer');
+                if (gsf) gsf.innerText = t.alreadyMember;
+                const gtl = document.getElementById('gate-to-login-btn');
+                if (gtl) gtl.innerText = t.gateLoginBtn;
+
+                const gle = document.getElementById('gate-login-email');
+                if (gle) gle.placeholder = t.searchPlaceholder.replace('...', '') + ' (Email)';
 
                 // Filters
                 const btns = document.querySelectorAll('.category-btn');
@@ -1613,32 +1692,38 @@
             }
 
             async function handleGateLogin() {
+                const t = translations[language];
                 const email = document.getElementById('gate-login-email').value;
                 const password = document.getElementById('gate-login-password').value;
                 console.log("Gate login attempt:", email);
-                if (!email || !password) { showToast("Please fill all fields", true); return; }
+                if (!email || !password) { showToast(t.fillAll, true); return; }
                 try {
                     await auth.signInWithEmailAndPassword(email, password);
-                    showToast("Welcome back!");
+                    showToast(t.welcomeBack);
                 } catch (error) {
                     console.error("Gate login error:", error.code, error.message);
-                    showToast(error.message, true);
+                    let msg = error.message;
+                    if (error.code === 'auth/operation-not-allowed') msg = t.authError;
+                    showToast(msg, true);
                 }
             }
 
             async function handleGateSignup() {
+                const t = translations[language];
                 const name = document.getElementById('gate-signup-name').value;
                 const email = document.getElementById('gate-signup-email').value;
                 const password = document.getElementById('gate-signup-password').value;
                 console.log("Gate signup attempt:", email);
-                if (!name || !email || !password) { showToast("Please fill all fields", true); return; }
+                if (!name || !email || !password) { showToast(t.fillAll, true); return; }
                 try {
                     const cred = await auth.createUserWithEmailAndPassword(email, password);
                     await cred.user.updateProfile({ displayName: name });
-                    showToast("Account created successfully!");
+                    showToast(t.accCreated);
                 } catch (error) {
                     console.error("Gate signup error:", error.code, error.message);
-                    showToast(error.message, true);
+                    let msg = error.message;
+                    if (error.code === 'auth/operation-not-allowed') msg = t.authError;
+                    showToast(msg, true);
                 }
             }
 
@@ -1664,12 +1749,13 @@
             }
 
             async function handleSignup() {
+                const t = translations[language];
                 const name = document.getElementById('signup-name').value;
                 const email = document.getElementById('signup-email').value;
                 const password = document.getElementById('signup-password').value;
 
                 if (!name || !email || !password) {
-                    showToast("Please fill all fields", true);
+                    showToast(t.fillAll, true);
                     return;
                 }
 
@@ -1677,32 +1763,33 @@
                     console.log("Attempting to sign up:", email);
                     const credential = await auth.createUserWithEmailAndPassword(email, password);
                     await credential.user.updateProfile({ displayName: name });
-                    showToast("Account created successfully!");
+                    showToast(t.accCreated);
                     console.log("Signup successful for:", email);
                     toggleAuthModal();
                 } catch (error) {
                     console.error("Signup error:", error.code, error.message);
                     let userFriendlyMsg = error.message;
                     if (error.code === 'auth/operation-not-allowed') {
-                        userFriendlyMsg = "Email/Password is not enabled in Firebase Authentication. Please enable it in your console.";
+                        userFriendlyMsg = t.authError;
                     }
                     showToast(userFriendlyMsg, true);
                 }
             }
 
             async function handleLogin() {
+                const t = translations[language];
                 const email = document.getElementById('login-email').value;
                 const password = document.getElementById('login-password').value;
 
                 if (!email || !password) {
-                    showToast("Please fill all fields", true);
+                    showToast(t.fillAll, true);
                     return;
                 }
 
                 try {
                     console.log("Attempting login:", email);
                     await auth.signInWithEmailAndPassword(email, password);
-                    showToast("Logged in successfully!");
+                    showToast(t.loggedIn);
                     toggleAuthModal();
                 } catch (error) {
                     console.error("Login error:", error.code, error.message);
